# cargo-features = ["edition2024"]

[package]
name = "ssd1327"
version = "0.2.0"
authors = ["Michael Nitschinger <michael@nitschinger.at>"]
edition = "2021"
categories = ["embedded", "no-std"]
description = "I2C driver for the SSD1327 OLED display controller"
documentation = "https://docs.rs/ssd1327"
keywords = ["no-std", "ssd1327", "oled", "embedded", "embedded-hal-driver"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/daschl/ssd1327"

[target.thumbv6m-none-eabi]
runner = "probe-run --chip RP2040"

[dependencies]
display-interface = "0.5.0"
embedded-graphics = "0.8.1"
# embedded-hal = "1.0.0"
# rppal = { version = "0.12", features = [ "hal" ] }
display-interface-spi = "0.5"
# linux-embedded-hal = "0.3.0"
fugit = "0.3.7"

# [dev-dependencies]
# rp2040-hal = "0.10"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
rp-pico = "0.9"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2"
panic-halt = "0.2"
# rp2040-boot2 = "0.2"

[patch.crates-io]
display-interface = { path = "../display-interface" }
display-interface-spi = { path = "../display-interface/spi" }
embedded-hal = { path = "../embedded-hal/embedded-hal" }
embedded-hal-bus = { path = "../embedded-hal/embedded-hal-bus" }

[[bin]]
name = "example"
path = "examples/raspberry_pi.rs"
